# uv_workspace_exclusion

./: README.md  pyproject.toml
projects/a/: pyproject.toml
projects/b/: README.md
projects/b/ba/: pyproject.toml
projects/b/bb/: pyproject.toml
projects/c/: pyproject.toml
projects/excluded1/: pyproject.toml
projects/excluded2/: pyproject.toml
