[project]
name = "project-excluded2"
version = "1.0.0"
description = "Project Excluded2 - explicitly excluded from workspace"
requires-python = ">=3.10"

# This project has a valid pyproject.toml
# But it's explicitly excluded in the root workspace configuration
# exclude = ["projects/excluded2"]

dependencies = [
    "typer>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
